--- a/src/modules/ImageSearch/Button/Button.module.css
+++ b/src/modules/ImageSearch/Button/Button.module.css
@@ -1,6 +1,7 @@
 .button {
   padding: 8px 16px;
   margin-left: 45%;
+  margin-top: 10px;
   border-radius: 2px;
   background-color: #3f51b5;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
